Begin Infinispan support. Add AbstractEntityView to viewframework

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants_de.properties
@@ -117,6 +117,19 @@ subsys_deploymentscanner_autoDeployZipped=PLEASE TRANSLATE Auto Deploy Zipped
 subsys_deploymentscanner_autoDeployExploded=PLEASE TRANSLATE Auto-deploy Exploded
 subsys_deploymentscanner_deploymentTimeout=PLEASE TRANSLATE Deployment Timeout (sec)
 
+subsys_infinispan_cache_container=PLEASE TRANSLATE Cache Container
+subsys_infinispan_cache_containers=PLEASE TRANSLATE Cache Containers
+subsys_infinispan_default_cache=PLEASE TRANSLATE Default Cache
+subsys_infinispan_jndiName=PLEASE TRANSLATE JNDI Name
+subsys_infinispan_listenerExecutor=PLEASE TRANSLATE Listener Executor
+subsys_infinispan_evictionExecutor=PLEASE TRANSLATE Eviction Executor
+subsys_infinispan_replicationQueueExecutor=PLEASE TRANSLATE Replication Queue Executor
+subsys_infinispan_isolation=PLEASE TRANSLATE Isolation
+subsys_infinispan_striping=PLEASE TRANSLATE Striping
+subsys_infinispan_aquireTimeout=PLEASE TRANSLATE Aquire Timeout (ms)
+subsys_infinispan_concurrencyLevel=PLEASE TRANSLATE Concurrency Level
+subsys_infinispan_evictionStrategy=PLEASE TRANSLATE Eviction Strategy
+
 subsys_jca_newDataSource=Hinzufugen
 subsys_jca_dataSource=Datenbank Adapter
 subsys_jca_dataSources=Datenbank Adapter
